kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resqnet
  labels:
    name: resqnet
    environment: production
